--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,10 @@ h1 {
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+    margin: 15px; /* Set button margin for spacing */
+    border: none; /* Remove default button border */
+    text-align: center; /* Center button text */
+
 }
 
 #jogar-cartas-modal button:hover, 
@@ -118,6 +122,14 @@ h1 {
 
 #fechar-modal:hover {
     color: #000;
+}
+
+#listar-cartas-modal #cartas {
+  display: flex; /* Enable flexbox layout */
+  flex-direction: column; /* Arrange items vertically */
+  align-items: center; /* Center items horizontally */
+  justify-content: flex-start; /* Align items at the top */
+
 }
 
 
