--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,8 @@ h1 {
 }
 
 #jogar-cartas-modal,
-#listar-cartas-modal {
+#listar-cartas-modal,
+#atualizar-cartas-modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -54,7 +55,8 @@ h1 {
 }
 
 #jogar-cartas-modal main, 
-#listar-cartas-modal main {
+#listar-cartas-modal main,
+#atualizar-cartas-modal main {
     background-color: #fefefe;
     margin: 10% auto;
     padding: 20px;
@@ -66,13 +68,15 @@ h1 {
 }
 
 #jogar-cartas-modal h2, 
-#listar-cartas-modal h2 {
+#listar-cartas-modal h2,
+#atualizar-cartas-modal h2 {
     margin-top: 0;
     font-size: 24px;
 }
 
 #jogar-cartas-modal label, 
-#listar-cartas-modal label {
+#listar-cartas-modal label,
+#atualizar-cartas-modal label {
     display: block;
     margin-bottom: 10px;
 }
@@ -80,7 +84,9 @@ h1 {
 #jogar-cartas-modal input[type="text"],
 #jogar-cartas-modal textarea , 
 #listar-cartas-modal input[type="text"], 
-#listar-cartas-modal textarea {
+#listar-cartas-modal textarea,
+#atualizar-cartas-modal input[type="text"],
+#atualizar-cartas-modal textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -90,7 +96,8 @@ h1 {
 }
 
 #jogar-cartas-modal button , 
-#listar-cartas-modal button{
+#listar-cartas-modal button,
+#atualizar-cartas-modal button{
     background-color: #FFB03B;
     color: #FFF;
     border: none;
@@ -104,11 +111,13 @@ h1 {
 }
 
 #jogar-cartas-modal button:hover, 
-#listar-cartas-modal button:hover {
+#listar-cartas-modal button:hover,
+#atualizar-cartas-modal button:hover {
     background-color: #FFA300;
 }
 
-#fechar-modal {
+#fechar-modal, 
+#fechar-modal2 {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -119,7 +128,8 @@ h1 {
     cursor: pointer;
 }
 
-#fechar-modal:hover {
+#fechar-modal:hover, 
+#fechar-modal2:hover {
     color: #000;
 }
 
