--- a/css/style.css
+++ b/css/style.css
@@ -4,75 +4,99 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #F8F8F8;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     height: 100vh;
 }
 
-body>header {
+header {
     background: #b9a0a0;
     padding: 10px 20px;
     text-align: center;
+    width: 100%;
+    height: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 70px;
-
-
 }
 
-body > footer {
+nav {
+    display: flex;
+    gap: 10px;
+    margin-top: 10px;
+}
+
+main {
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 70px; /* Espaço para o header */
+    padding-bottom: 100px; /* Espaço para o footer */
+}
+
+footer {
     background-color: #a79696;
-    color: #fff;
+    color: #000;
     padding: 30px 20px;
     text-align: center;
-    position: absolute;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: fixed;
     bottom: 0;
     left: 0;
-    width: 2000px;
+}
+
+footer p {
+    color: #000;
 }
 
 .container {
-    width: 600px;
-    height: 500px;
+    width: auto;
     text-align: center;
-    background: #c46363;
-    display: contents;
-
+    background: #ffffff00;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 h1 {
     color: #333;
     font-size: 36px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
 }
 
 #button1,
-#button2 {
+#button2,
+#button3 {
     background-color: #FFB03B;
     color: #FFF;
     border: none;
-    padding: 15px 30px;
-    font-size: 18px;
+    padding: 10px 20px;
+    font-size: 16px;
     cursor: pointer;
-    border-radius: 10px;
+    border-radius: 5px;
     transition: background-color 0.3s ease;
-    justify-content: space-around;
-
+    margin: 0 5px;
 }
 
-#button:hover,
-#button:hover {
+#button1:hover,
+#button2:hover,
+#button3:hover {
     background-color: #FFA300;
 }
 
 .illustration {
-    
     max-width: 400px;
     margin-top: 50px;
-    justify-content: space-around;
-
+    display: flex;
+    justify-content: center;
 }
 
 #jogar-cartas-modal,
@@ -141,7 +165,6 @@ h1 {
     cursor: pointer;
     border-radius: 5px;
     margin: 15px;
-    border: none;
     text-align: center;
 }
 
