--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,8 @@ h1 {
 
 #jogar-cartas-modal,
 #listar-cartas-modal,
-#atualizar-cartas-modal {
+#atualizar-cartas-modal,
+#listar-todas-cartas-modal {
     display: none;
     position: fixed;
     z-index: 1;
@@ -115,7 +116,8 @@ h1 {
 
 #jogar-cartas-modal main,
 #listar-cartas-modal main,
-#atualizar-cartas-modal main {
+#atualizar-cartas-modal main,
+#listar-todas-cartas-modal main {
     background-color: #dcd5d5;
     margin: 10% auto;
     padding: 20px;
@@ -131,14 +133,16 @@ h1 {
 
 #jogar-cartas-modal h2,
 #listar-cartas-modal h2,
-#atualizar-cartas-modal h2 {
+#atualizar-cartas-modal h2,
+#listar-todas-cartas-modal h2 {
     margin-top: 0;
     font-size: 24px;
 }
 
 #jogar-cartas-modal label,
 #listar-cartas-modal label,
-#atualizar-cartas-modal label {
+#atualizar-cartas-modal label,
+#listar-todas-cartas-modal label {
     display: block;
     margin-bottom: 10px;
 }
@@ -148,7 +152,9 @@ h1 {
 #listar-cartas-modal input[type="text"],
 #listar-cartas-modal textarea,
 #atualizar-cartas-modal input[type="text"],
-#atualizar-cartas-modal textarea {
+#atualizar-cartas-modal textarea,
+#listar-todas-cartas-modal input[type="text"],
+#listar-todas-cartas-modal textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -159,7 +165,8 @@ h1 {
 
 #jogar-cartas-modal button,
 #listar-cartas-modal button,
-#atualizar-cartas-modal button {
+#atualizar-cartas-modal button
+#listar-todas-cartas-modal button {
     background-color: #FFB03B;
     color: #FFF;
     border: none;
@@ -173,12 +180,14 @@ h1 {
 
 #jogar-cartas-modal button:hover,
 #listar-cartas-modal button:hover,
-#atualizar-cartas-modal button:hover {
+#atualizar-cartas-modal button:hover,
+#listar-todas-cartas-modal button:hover {
     background-color: #FFA300;
 }
 
 #fechar-modal,
-#fechar-modal2 {
+#fechar-modal2, 
+#fechar-modal3 {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -190,11 +199,13 @@ h1 {
 }
 
 #fechar-modal:hover,
-#fechar-modal2:hover {
+#fechar-modal2:hover,
+#fechar-modal3:hover {
     color: #000;
 }
 
-#listar-cartas-modal #cartas {
+#listar-cartas-modal #cartas, 
+#listar-todas-cartas-modal #cartas2 {
     display: flex;
     flex-direction: column;
     align-items: center;
