--- a/css/style.css
+++ b/css/style.css
@@ -4,29 +4,35 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #F8F8F8;
     display: flex;
-    flex-direction: column;
     height: 100vh;
 }
 
 header {
     background: #b9a0a0;
-    padding: 10px 20px;
+    padding: 0;
     text-align: center;
     width: 100%;
-    height: 70px;
+    height: 100px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
     position: fixed;
     top: 0;
     left: 0;
+    max-width: 100%;
+    gap: 10px;
+    margin: 0;
 }
 
-nav {
+
+
+.nav-links {
     display: flex;
     gap: 10px;
-    margin-top: 10px;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
 }
 
 main {
@@ -34,17 +40,17 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding-top: 70px; /* Espaço para o header */
-    padding-bottom: 100px; /* Espaço para o footer */
+    max-height: 100vh;
+
 }
 
 footer {
     background-color: #a79696;
     color: #000;
-    padding: 30px 20px;
+    padding: 12px 0;
     text-align: center;
     width: 100%;
-    height: 100px;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -59,11 +65,15 @@ footer p {
 
 .container {
     width: auto;
+    max-width: 1200px;
     text-align: center;
     background: #ffffff00;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
+    overflow: hidden;
+    flex-direction: column;
 }
 
 h1 {
@@ -75,7 +85,8 @@ h1 {
 #button1,
 #button2,
 #button3,
-#button4 {
+#button4, 
+.btn {
     background-color: #FFB03B;
     color: #FFF;
     border: none;
@@ -95,67 +106,50 @@ h1 {
 
 .illustration {
     max-width: 400px;
-    margin-top: 50px;
-    display: flex;
-    justify-content: center;
+    background-position:center;
+    background-size: cover;
 }
 
-#jogar-cartas-modal,
-#listar-cartas-modal,
-#atualizar-cartas-modal,
-#listar-todas-cartas-modal {
+.modal {
     display: none;
+    padding-top: 60px;
     position: fixed;
     z-index: 1;
     left: 0;
     top: 0;
     width: 100%;
-    height: 100%;
+    max-height: 100% -  200px;
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
-#jogar-cartas-modal main,
-#listar-cartas-modal main,
-#atualizar-cartas-modal main,
-#listar-todas-cartas-modal main {
+.modal main {
     background-color: #dcd5d5;
-    margin: 10% auto;
-    padding: 20px;
+    margin: 2% auto;
+    padding: 30px;
     border: 1px solid #888;
-    width: 100%;
+    width: 80%;
     max-width: 900px;
-    height: 600px;
-    overflow: scroll;
-    display: flex;
-    flex-direction: column; 
-    gap: 20px; 
+    flex-direction: column;
+    gap: 20px;
+    overflow-y: hidden;
+    height: 700px;
+    border-radius: 12px;
+    position: relative;
 }
 
-#jogar-cartas-modal h2,
-#listar-cartas-modal h2,
-#atualizar-cartas-modal h2,
-#listar-todas-cartas-modal h2 {
+.modal h2 {
     margin-top: 0;
     font-size: 24px;
 }
 
-#jogar-cartas-modal label,
-#listar-cartas-modal label,
-#atualizar-cartas-modal label,
-#listar-todas-cartas-modal label {
+.modal label {
     display: block;
     margin-bottom: 10px;
 }
 
-#jogar-cartas-modal input[type="text"],
-#jogar-cartas-modal textarea,
-#listar-cartas-modal input[type="text"],
-#listar-cartas-modal textarea,
-#atualizar-cartas-modal input[type="text"],
-#atualizar-cartas-modal textarea,
-#listar-todas-cartas-modal input[type="text"],
-#listar-todas-cartas-modal textarea {
+.modal input[type="text"],
+.modal textarea {
     width: 100%;
     padding: 10px;
     margin-bottom: 20px;
@@ -164,10 +158,7 @@ h1 {
     box-sizing: border-box;
 }
 
-#jogar-cartas-modal button,
-#listar-cartas-modal button,
-#atualizar-cartas-modal button,
-#listar-todas-cartas-modal button {
+.modal button {
     background-color: #FFB03B;
     color: #FFF;
     border: none;
@@ -179,31 +170,32 @@ h1 {
     text-align: center;
 }
 
-#jogar-cartas-modal button:hover,
-#listar-cartas-modal button:hover,
-#atualizar-cartas-modal button:hover,
-#listar-todas-cartas-modal button:hover {
+.modal button:hover {
     background-color: #FFA300;
 }
+
 #fechar-modal1,
-#fechar-modal,
-#fechar-modal2, 
-#fechar-modal3 {
-    position: absolute;
+#fechar-modal2,
+#fechar-modal3,
+#fechar-modal4 {
+    position: fixed;
     top: 10px;
     right: 10px;
-    background-color: transparent;
+    background-color: #2d1c03;
     border: none;
-    color: #333;
+    color: #9a8a8a;
     font-size: 16px;
     cursor: pointer;
+    border: none;
 }
 
 #fechar-modal1:hover,
-#fechar-modal:hover,
 #fechar-modal2:hover,
-#fechar-modal3:hover {
-    color: #000;
+#fechar-modal3:hover,
+#fechar-modal4:hover {
+    color: #d7a7a7;
+    background-color: #788100;
+
 }
 
 #listar-cartas-modal #cartas, 
@@ -214,10 +206,100 @@ h1 {
     justify-content: flex-start;
 }
 
-#jogar-cartas-modal h2, form, #carta {
-    width: 400px;
+#carta, #carta1 {
+    width: 100%;
+    position: relative;
+    height: 100%;
 }
 
-#carta1{
-    width: 900px;
+
+.lista {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    max-height: 100% ;
+    margin-bottom: 70px;
+    overflow-y: scroll;
+}
+
+.lista::-webkit-scrollbar {
+    width: 8px;
+}
+
+.lista::-webkit-scrollbar-thumb {
+    background-color: #FFB03B;
+    border-radius: 4px;
+}
+
+.lista::-webkit-scrollbar-track {
+    background-color: #dcd5d5;
+    border-radius: 4px;
+}
+
+.carta {
+    padding: 20px;
+    max-width: 80%;
+    border: #FFA300 solid 1px;
+    margin: 10px;
+    border-radius: 15px;
+}
+
+.carta h3 {
+    margin: 0;
+}
+
+.carta .label {
+    font-weight: 700;
+}
+
+.carta .content {
+    margin-top: 10px;
+    font-weight: 300;
+}
+
+.username {
+    font-weight: 700;
+    color: #a47117;
+
+}
+
+@media (max-width: 768px) {
+    .container {
+        flex-direction: column;
+    }
+
+    .illustration {
+        max-width: 300px;
+    }
+
+    .modal main {
+        text-align: justify;
+        font-weight: 700;
+        height: 82vh;
+        padding: 30px;
+
+    }
+    
+    .modal button {
+        padding: 8px 12px;
+        margin: 0 12px;
+    }
+
+    .modal p {
+        font-size: 14px;
+    }
+    
+
+    #button1,
+    #button2,
+    #button3,
+    #button4, 
+    .btn {
+        padding: 6px 12px;
+        font-size: 12px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+        margin: 0;
+        
+    }
 }
